Fix collapse menu by styling .collapsing like .collapse

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,8 @@ section,
     display: none;
   }
 }
-.collapse.is-sticky {
+.collapse.is-sticky,
+.collapsing.is-sticky {
   top: 73px;
 }
 .tagline {
